--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "homepage": "https://github.com/aleshadk/me2me_bot#readme",
   "dependencies": {
     "express": "^4.13.4",
-    "mongoose": "^4.4.19"
+    "mongoose": "^4.4.19",
+    "telegram-bot-api": "^1.1.0"
   },
   "devDependencies": {
     "nodemon": "^1.9.2"
